--- a/apt/map.jinja
+++ b/apt/map.jinja
@@ -15,11 +15,11 @@
         'remove_preferences': false,
         'clean_preferences_d': false,
         'default_keyserver': 'pool.sks-keyservers.net',
-        'default_url': 'http://httpredir.debian.org/debian/',
+        'default_url': 'http://deb.debian.org/debian/',
         'repositories': {
           'sane_default': {
              'distro': distribution,
-             'url': 'http://httpredir.debian.org/debian/',
+             'url': 'http://deb.debian.org/debian/',
              'arch': arch,
              'comps': ['main'],
           },
